# yew-octicons

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  index-26f8826f4f1e91b2.js  index-26f8826f4f1e91b2_bg.wasm  index-2d630b19166a52d9.js  index-2d630b19166a52d9_bg.wasm  index-3695d321dd670e53.js  index-3695d321dd670e53_bg.wasm  index-3e833bcafeb43f50.js  index-3e833bcafeb43f50_bg.wasm  index-64661c6b1bce00d9.js  index-64661c6b1bce00d9_bg.wasm  index-90b92b50068cec1a.js  index-90b92b50068cec1a_bg.wasm  index-a9a46b3d11b40ebe.js  index-a9a46b3d11b40ebe_bg.wasm  index-b11ab5e52bd0b4e7.js  index-b11ab5e52bd0b4e7_bg.wasm  index-b82516fb86d87cb0.js  index-b82516fb86d87cb0_bg.wasm  index-caff59d45357d59d.js  index-caff59d45357d59d_bg.wasm  index-cefc9ebe7006d7a.js  index-cefc9ebe7006d7a_bg.wasm  index-d17e7c842be43f3c.js  index-d17e7c842be43f3c_bg.wasm  index-dfe98cbf7615417d.js  index-dfe98cbf7615417d_bg.wasm  index.html
.github/workflows/: checks.yml  deploy.yml  rust.yml  test.yml
examples/alert-sizing/: Cargo.toml  build.sh
examples/icon-sizing/: Cargo.toml  README.md  build.sh  index.html
examples/icon-sizing/src/: lib.rs
examples/icon-sizing/static/: index.html
pkg/: README.md  package.json  yew_octicons_example_icon_sizing.d.ts  yew_octicons_example_icon_sizing.js  yew_octicons_example_icon_sizing_bg.wasm  yew_octicons_icon_sizing.d.ts  yew_octicons_icon_sizing.js  yew_octicons_icon_sizing_bg.d.ts  yew_octicons_icon_sizing_bg.wasm  yew_octicons_icon_sizing_bg.wasm.d.ts
src/: lib.rs
yew-octicons/: Cargo.toml  build.rs
yew-octicons/src/: lib.rs
(+2 files in other folders)
