[package]
name = "yew-octicons"
version = "0.4.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2021"
description = "Easy support for Octicons in yew"
repository = "https://github.com/io12/yew-octicons"
readme = "../README.md"
keywords = ["yew", "octicons", "icons", "wasm"]
license = "MIT"

[build-dependencies]
heck = "0.4.1"
scraper = "0.18.0"
quote = "1.0.23"
proc-macro2 = "1.0.51"

[dependencies]
yew = "0.20.0"
