[package]
name = "yew-octicons-example-icon-sizing"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2021"
publish = false

[dependencies]
yew-octicons = { path = "../../yew-octicons" }
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.84"

[lib]
crate_type = ["cdylib"]
